--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@appbaseio/reactivesearch": "^3.17.0",
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
@@ -14,8 +16,10 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-fontawesome": "^1.7.1",
+    "react-rangeslider": "^2.2.0",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
+    "react-star-ratings": "^2.3.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.0"
